--- a/UD2-VANILLA-JS/T23-Ej8a10/Ejercicio09/index.html
+++ b/UD2-VANILLA-JS/T23-Ej8a10/Ejercicio09/index.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Javier Epifanio" />
-    <title>Ejercicio 1</title>
-    <script type="text/javascript">
-        alert("Prueba JavaScript")
-    </script>
+    <title>Ejercicio 9</title>
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
     <noscript>
         <p>JaviEpi Web</p>
-        <p>La página web requiere JavaScript</p>
+        <p>La página web requiere JavaScript, áctivelo por favor.</p>
     </noscript>
-    <h1>Ejemplo 1: código embebido</h1>
+    <h1>UD2 Ejercicio 09</h1>
 </body>
 </html>
