--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="UD6-DOM/index.html">UD6</a></li>
                     <li><a href="#">UD7</a></li>
                     <li><a href="#">UD8</a></li>
-                    <li><a href="#>EX</a></li>
+                    <li><a href="#"">EX</a></li>
                 </ul>
             </nav>
             <h1>DWEC</h1>
