--- a/UD6-DOM/index.html
+++ b/UD6-DOM/index.html
@@ -36,7 +36,7 @@
             <p>Todos los ejercicios y examenes de Desarrollo Web en Entorno Cliente UD6.</p>
             <div class="ejercicios">
                 <article class="ejercicio">
-                    <a href=""><h3>Reentrega Examen UD4-5-6. Febrero de 2022</h3></a>
+                    <a href="Examen_UD4-5-6/index.html"><h3>Reentrega Examen UD4-5-6. Febrero de 2022</h3></a>
                 </article>
             </div>
         </section>
