index.html arreglo logo img

--- a/UD6-DOM/index.html
+++ b/UD6-DOM/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="content-header">
-            <img src="DWEC/img/img-logo.svg" alt="logo">
+            <img src="/DWEC/img/img-logo.svg" alt="logo">
             <nav>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
