--- a/UD6-DOM/Examen_UD4-5-6/index.html
+++ b/UD6-DOM/Examen_UD4-5-6/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="content-header">
-            <img src="../img/img-logo.svg" alt="logo">
+            <img src="/DWEC/img/img-logo.svg" alt="logo">
             <nav>
                 <ul>
                     <li><a href="/DWEC/index.html">Inicio</a></li>
