index.html arreglo href inicio

--- a/UD6-DOM/index.html
+++ b/UD6-DOM/index.html
@@ -15,7 +15,7 @@
             <img src="/DWEC/img/img-logo.svg" alt="logo">
             <nav>
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="https://iesgrancapitan-dwec.github.io/sitio-de-repaso-JaviEpi/">Inicio</a></li>
                     <li><a href="#">UD1</a></li>
                     <li><a href="">UD2</a></li>
                     <li><a href="">UD3</a></li>
