--- a/UD6-DOM/index.html
+++ b/UD6-DOM/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="content-header">
-            <img src="/DWEC/img/img-logo.svg" alt="logo">
+            <img src="../img/img-logo.svg" alt="logo">
             <nav>
                 <ul>
                     <li><a href="https://iesgrancapitan-dwec.github.io/sitio-de-repaso-JaviEpi/">Inicio</a></li>
