--- a/UD7-JQUERY/Plugin/index.html
+++ b/UD7-JQUERY/Plugin/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/efectoImg.js"></script>
+    <script src="js/efectoImg1.js"></script>
     <script src="js/cambioColor.js"></script>
     <style>
         img {
@@ -29,8 +30,7 @@
                 <img id="img" src="img/js.png" alt="logo js">
                 <img id="img" src="img/jq.png" alt="logo jq">
             </div>
-            <button id="efectoImg1">Efecto fadeOut</button>
-            <button id="efectoImg2">Efecto slideUp</button>
+            <button id="efectoImg">Efecto fadeOut</button>
         </section>
         <section>
             <h2>Ejemplo plugin jQuery con colores</h2>
